# python-project-boilerplate

./: .gitignore  Dockerfile  README.md  docker-build.sh  pyproject.toml  requirements.txt  setup.cfg
src/python_project_boilerplate/: main.py  utils.py
tests/: test_hello_world.py
